# langchain_learning

./: main.py  pyproject.toml
CH-1/: 01_Basics.ipynb  2_messages.ipynb  3_structured_outputs.ipynb
CH-2/: 1_first_chain.ipynb  2_chain_with_custom_runnable.ipynb  3_parallel_chains.ipynb
