[project]
name = "langchain-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.2.17",
    "langchain-anthropic>=1.4.3",
    "langchain-core>=1.3.2",
    "langchain-openai>=1.2.1",
    "load-dotenv>=0.1.0",
    "openai>=2.33.0",
    "python-dotenv>=1.2.2",
]
